<resources>
    <string name="app_name">Gallery Lite</string>
    <string name="fragment1_name">All Images</string>
    <string name="fragment2_name">Folders</string>
    <!--Bottom Navigation-->
    <string name="photos">Photos</string>
    <string name="folders">Folders</string>
    <!--Fragment1-Items-->
    <string name="select_items">Select items</string>
    <string name="change_theme">Change Theme</string>
    <string name="capture_image">Capture Image</string>
    <string name="import_img">Import</string>
    <string name="import_img_clipboard">Import From Clipboard</string>
    <string name="clear_trash">Clear Trash</string>
    <string name="slideshow">SlideShow</string>
    <!--Fragment2-Items-->
    <string name="folder_setting">Setting</string>
    <string name="folder_new">New Folder</string>
    <string name="folder_delete">Delete Folder</string>
    <string name="folder_delete_cancel">Cancel Delete</string>
    <string name="folder_pin">Set Pin For Secret Folder</string>
    <!--Contextual Action Bar Options-->
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select All</string>
    <string name="favourite">Favourite</string>
    <string name="move_to_folder">Move to folder</string>
    <string name="copy_to_folder">Copy to folder</string>


    <!--??-->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>