<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu2_folder_setting"
        android:title="@string/folder_setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu2_folder_new"
        android:title="@string/folder_new"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu2_folder_delete"
        android:title="@string/folder_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu2_folder_delete_cancel"
        android:title="@string/folder_delete_cancel"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu2_folder_pin"
        android:title="@string/folder_pin"
        app:showAsAction="never" />
</menu>